# fast_rails_log_analyzer_in_haskell

./: .gitignore  Main.hs  Makefile  Parser.hs  README.txt  Stats.hs  Testing.hs  Types.hs  Utils.hs  plot.gp  rails-log-analyzer-hs.cabal
RLA/: Analyzer.hs  DemoHelp.hs  Main.hs  Parser.hs  Stats.hs  Stats2.hs  Testing.hs  Types.hs  Utils.hs
docs/: wanted_stats_format.json
inputs/: sample
outputs/: test_many_hosts_consolidated.txt
utils/: makeforprof.sh  memprof.sh  pl_analyze.gp  runprof.sh
