Build-type:     Simple
Name:           rails-log-analyzer-hs
Version:        0.0.3
Synopsis:       simple rails log analyzer akin to pl_analyze
Homepage:       https://github.com/nbogie/fast_rails_log_analyzer_in_haskell
Category:       Rails
License:        MIT
License-file:   docs/LICENSE
Author:         Neill Bogie
Copyright:      Neill Bogie 2011
Stability:      experimental
Tested-with:    GHC ==6.12
Executable: rails-log-analyzer-hs
Build-depends:
  base == 4.2.0.0, 
  bytestring == 0.9.1.7, 
  regex-posix == 0.94.4,
  cmdargs == 0.6.*,
  containers == 0.3.0.0,
  json == 0.4.4
Main-Is: Main.hs
GHC-Options: -O2
